--- a/src/components/forget/reset.css
+++ b/src/components/forget/reset.css
@@ -183,7 +183,7 @@ styling resend components
         /* font-family: 'montserat'; */
         width: 35%;
         margin: 0 auto 5px auto;
-        padding: 5px 10px;
+        padding: 2% 3%;
         border: 1px solid #eeeeee;
         box-shadow: rgba(17, 17, 26, 0.1) 0px 4px 16px,rgba(17, 17, 26, 0.05) 0px 8px 32px;
     }
