--- a/src/components/home/more/more.css
+++ b/src/components/home/more/more.css
@@ -12,7 +12,7 @@
   margin: 0px auto;
   text-align: center;
   background-color: #ffffff;
-  padding: 40px;
+  padding: 40px 7%;
 }
 .more .more-section .ligne-rouge{
     width: 10%;text-align: left;padding-bottom: 5px;
@@ -28,9 +28,11 @@
     border-bottom: 2px solid var(--red);
 }
 .more .player{
-    display: flex;
-    justify-content: center;align-items: center;
-    margin: 20px auto;
+    width: 100%;
+    border-radius: 4px;
+    margin: 2px auto;
+    background-size: cover;
+    background-position: center;
 }
 .more .img-phone{
     display: inline-block;
@@ -39,4 +41,12 @@
 }
 .more .more-section p,li{
     text-align: left;
+    font-size: 21px;
+    margin-top: 0;
+    font-family: '-apple-system', 'BlinkMacSystemFont', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+@media only screen and (min-width:992px){
+    .more .player{
+        width: 100%;
+    }
 }
