--- a/src/components/signup/signup.css
+++ b/src/components/signup/signup.css
@@ -63,6 +63,9 @@
 .signup .signup-check{
   cursor: pointer;
 }
+.signup .checkbox {
+  margin: 20px 0px;
+}
 
 @media only screen and (min-width: 768px) {
   .signup {
