--- a/src/components/home/operations/operations.css
+++ b/src/components/home/operations/operations.css
@@ -1,5 +1,5 @@
 .operations {
-    margin: 30px 0px;
+    /* margin: 30px 0px; */
     padding: 20px 5%;
     background: var(--red);
     color: var(--white);
