add switching for fiat currency

--- a/src/components/buycrypto/buycrypto.css
+++ b/src/components/buycrypto/buycrypto.css
@@ -23,6 +23,7 @@
   border-bottom: 1px solid;
 }
 .buycrypto .rate {
+  position: relative;
   margin: 25px 0px;
   padding: 5%;
   text-align: center;
