--- a/src/components/home/contacts/contacts.css
+++ b/src/components/home/contacts/contacts.css
@@ -27,22 +27,17 @@
     width: 65px;
     height: 65px;
     margin: 5px 5px;
+    color: var(--red);
     border: 2px solid var(--red);
     border-radius: 50%;
     overflow: hidden;
 }
-/* .social-icon-couvre{
-    position: absolute;
-    transition: 0.35s;
-    width: 65px;height: 65px;
-    top: -150%;
-    background-color: var(--red);
-    opacity: 0.7;
+.social-icon:hover {
+    color: var(--white);
+    background: var(--red);
+    transition: 0.5s all ease;
+    border: 2px solid var(--white);
 }
-.social-icon:hover .social-icon-couvre{
-    top: 0px;
-    z-index: -10;
-} */
 
 .social-icon img {
     display: block;
@@ -142,6 +137,43 @@
 .contacts .form-group {
     margin: 30px 0px;
 }
+.socials .facebook:hover{
+    background-color: #3b5998;
+    color: white;
+    transition: 0.5s all ease;
+    border: 2px solid #3b5998;
+}
+.socials .twitter:hover{
+    background-color: deepskyblue;
+    color: white;
+    transition: 0.5s all ease;
+    border: 2px solid deepskyblue;
+}
+.socials .linkedin:hover{
+    background-color: rgb(17, 17, 253);
+    color: white;
+    transition: 0.5s all ease;
+    border: 2px solid rgb(17, 17, 253);
+}
+.socials .instagram:hover{
+    background: #1a2a6c;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    color: white;
+    transition: 0.5s all ease;
+    border: 2px solid var(--berge);
+}
+.MuiFormControl-root{
+    margin: 5px auto!important;
+}
+.btn-loader{
+    width: 100%;
+    text-align: center;
+    display: flex;
+    align-items: center;
+    justify-content:center ;
+}
+
 
 @media screen and (min-width: 768px) {
     .contact {
