--- a/src/components/home/hero/hero.css
+++ b/src/components/home/hero/hero.css
@@ -24,18 +24,63 @@
 }
 .hero button {
     display: block;
-    padding: 4%;
-    background: var(--red);
     border: none;
-    border-radius: 10px;
+    max-width: 50%;
+    background: inherit;
     color: var(--white);
-    font-size: 1.3em;
-    font-weight: bold;
-    transition: all 2s ease-out;
 }
-.hero .countries {
-    /* margin-top: 20px; */
-    /* text-align: center; */
+.hero button:hover{
+    color: var(--red);
+}
+.hero .btn-flip{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    padding: 4% 5%;
+    width: 50%;
+    max-width: 140px;
+    color: var(--red);
+    border: 2px solid var(--red);
+    border-radius: 10px;
+    font-size: 1.4em;
+    font-weight: bold;
+    overflow: hidden;
+    transition: all 0.6s ease-out;
+}
+.hero .btn-flip:hover{
+    color: var(--white);
+}
+/* apparition horizontale*/
+/* .hero .btn-flip::before{
+    background-color: var(--red);
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: -1;
+    transform: translate(-50%,-50%);
+    transition: all 0.6s ease-out;
+    width: 110%;
+    height: 110%;
+} */
+
+/* -- apparition oblique --*/
+.hero .btn-flip::before{
+    background-color: var(--red);
+    content: "";
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    z-index: -1;
+    transform: translate(-50%,-50%) rotate(35deg);
+    transition: all 0.6s ease-out;
+    width: 0%;
+    height: 230%;
+}
+.hero .btn-flip:hover::before{
+    width: 250%;
+    overflow: hidden;
 }
 
 .hero .country {
