--- a/src/components/home/operations/operations.css
+++ b/src/components/home/operations/operations.css
@@ -24,7 +24,7 @@
     height: 55px;
     margin: 10px 0px;
     background: var(--transparency);
-    border: 3px solid var(--white);
+    border: 1px solid var(--white);
     border-radius: 8px;
     font-size: 1.3em;
     font-weight: bold;
@@ -42,6 +42,8 @@
 }
 .listen{
     display: flex;
+    position: relative;
+    z-index: 1;
 }
 .contri{
     width: 12%;
@@ -87,5 +89,101 @@
     }
     .contri{
         width: 14.5%;
+    }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    
+    .btn-neon{
+        position: relative;
+        display: inline-block;
+        color: #ffffff;
+        text-transform: uppercase;
+        text-decoration: none;
+        overflow: hidden;
+        transition: 0.2s;
+        /* border: 1px solid #2196f3; */
+        
+    }
+    .btn-neon:hover{
+        color: var(--white);
+        box-shadow: 0 0 5px #ffffff, 0 0 10px #5fb0f3,0 0 20px #99caf1;
+        transition-delay: 1s;
+    }
+    .btn-neon span{
+    display: block;
+    position: absolute;
+    }
+    .btn-neon span:nth-child(1){
+        top: 0;
+        left: -100%;
+        width: 100%;
+        height: 3px;
+        background: linear-gradient(90deg,transparent,#ffffff);
+    }
+    .btn-neon:hover span:nth-child(1){
+        top: 0;
+        left: 100%;
+        transition: 1s;
+    }
+    .btn-neon span:nth-child(3){
+        bottom: 0;
+        right: -100%;
+        width: 100%;
+        height: 3px;
+        background: linear-gradient(270deg,transparent,#ffffff);
+    }
+    .btn-neon:hover span:nth-child(3){
+        right: 100%;
+        transition: 1s;
+        transition-delay: 0.5s;
+    }
+    .btn-neon span:nth-child(2){
+        top: -100%;
+        right: 0%;
+        width: 3px;
+        height: 100%;
+        background: linear-gradient(1800deg,transparent,#ffffff);
+    }
+    .btn-neon:hover span:nth-child(2){
+        top: 100%;
+        transition: 1s;
+        transition-delay: 0.25s;
+    }
+    .btn-neon span:nth-child(4){
+        bottom: -100%;
+        left: 0%;
+        width: 3px;
+        height: 100%;
+        background: linear-gradient(360deg,transparent,#ffffff);
+    }
+    .btn-neon:hover span:nth-child(4){
+        bottom: 100%;
+        transition: 1s;
+        transition-delay: 0.75s;
+    }
+    .operations .taille{
+        font-size: 15px;
     }
 }
