--- a/src/components/home/contacts/contacts.css
+++ b/src/components/home/contacts/contacts.css
@@ -165,6 +165,12 @@
     transition: 0.5s all ease;
     border: 2px solid rgb(17, 17, 253);
 }
+.socials .youtube:hover{
+    background-color: rgb(253, 17, 17);
+    color: white;
+    transition: 0.5s all ease;
+    border: 2px solid rgb(253, 17, 17);
+}
 .socials .instagram:hover{
     background: #1a2a6c;  /* fallback for old browsers */
     background: -webkit-linear-gradient(to right, #fdbb2d, #b21f1f, #1a2a6c);  /* Chrome 10-25, Safari 5.1-6 */
