--- a/src/components/home/services/services.css
+++ b/src/components/home/services/services.css
@@ -2,12 +2,13 @@
     padding: 30px 20px;
     text-align: center;
 }
-.services h1 {
+.services h2 {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
+    font-size: 2em;
 }
-.services h1 span {
+.services h2 span {
     display: block;
     width: 150px;
     margin-top: 8px;
