--- a/src/components/home/about/about.css
+++ b/src/components/home/about/about.css
@@ -2,15 +2,16 @@
   margin: 50px auto;
   padding: 4%;
 }
-.about h1 {
+.about h2 {
   text-align: center;
+  font-size: 2em;
 }
-.about h1 {
+.about h2 {
     display: flex;
     flex-flow: column nowrap;
     align-items: center;
 }
-.about h1 span {
+.about h2 span {
     display: block;
     width: 100px;
     margin-top: 8px;
