--- a/src/components/home/operations/operations.css
+++ b/src/components/home/operations/operations.css
@@ -50,6 +50,7 @@
 }
 
 @media screen and (min-width: 768px) {
+    
     .operations {
         display: flex;
         justify-content: space-between;
@@ -62,6 +63,15 @@
 }
 
 @media screen and (min-width: 1200px) {
+    .theader{
+        display: block;
+        font-size: 3em;
+        margin-block-start: 0.67em;
+        margin-block-end: 0.67em;
+        margin-inline-start: 0px;
+        margin-inline-end: 0px;
+        font-weight: bold;
+    }
     .operations {
         justify-content: space-around;
     }
@@ -90,30 +100,6 @@
     .contri{
         width: 14.5%;
     }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     
     .btn-neon{
         position: relative;
